Bug fixes
Slider repositioning on window resize, arrow not cropped anymore, logs
on progression bar usage

--- a/assets/frommail8.css
+++ b/assets/frommail8.css
@@ -110,7 +110,7 @@ h3 {
   {
     margin-top: 4.5vh;
     font-size: 6.5vh;
-    font-family: 'Code Light';
+    font-family: 'Code';
     font-weight: 300;
     color: white;
   }
@@ -362,7 +362,7 @@ input[value="pause"]
 #left_arrow_icon
  {
     height: 65.1vh;
-    width: 21.41vh;
+    width: 23vh;
     float: left;
     border-style: none;
     display: inline-block;
@@ -386,7 +386,7 @@ input[value="pause"]
  #right_arrow_icon
  {
   height: 65.1vh;
-  width: 21.41vh;
+  width: 23vh;
   display: inline-block;
   float: right;
   border-style: none;
@@ -495,7 +495,7 @@ input[value="pause"]
     position: absolute;
     bottom: 0;
     right: 10px;
-    font-family: 'Code Light';
+    font-family: 'Code';
     font-weight: 300;
     font-size: 3em;
     text-align: center;
@@ -780,7 +780,7 @@ and (max-device-width : 480px)
   {
     margin-top: 4.5vh;
     font-size: 14vw;
-    font-family: 'Code Light';
+    font-family: 'Code';
     font-weight: 300;
     color: black;
   } 
@@ -810,7 +810,7 @@ and (max-device-width : 480px)
 
     .sound_box
   {
-    margin: 0 0 0 0;
+    margin: 0 1px 0 1px;
     position: relative;
   }
 
@@ -909,6 +909,7 @@ and (max-device-width : 480px)
     background-color: #531931;
     width: 100%;
     height: 16vh;
+    z-index: 1000000000;
   }
 
   #buttons_area
